fix: removed excess spacing

--- a/styles/Countdown.module.css
+++ b/styles/Countdown.module.css
@@ -1,7 +1,7 @@
 .countdown{
     min-width: 80%;
     width: 100px;
-    margin: 4rem auto;
+    margin: 1rem auto;
 }
 .countdown p{
     font-size: 2em;
