--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -1,5 +1,5 @@
 .rock_solid{
-  margin: 1rem auto
+  margin: 0.5rem auto
 }
 
 .main{
